[metadata]
name = loopster
summary = Service library
description-file =
    README.md
long_description_content_type = text/markdown
author = VK Tech
author-email = digital.tech@corp.mail.ru
home-page = http://infra.pages.gitlab.corp.mail.ru/iaas/libraries/rooster
classifier =
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.8

[files]
packages =
    loopster

[bdist_wheel]
universal = 1

[build_sphinx]
all_files = 1
build-dir = doc/build
source-dir = doc/source

[extras]
mysqlwrapper = restalchemy>=5.1.0
bjoernsvc = bjoern==3.1.0
etcdguard = httpetcd>=0.3.3,<1.0.0
